ct-transpiler/testsuite/good/SingletonPieceConstr/SingletonPieceConstr.hs
{-# LANGUAGE ComposableTypes #-}

module SingletonPieceConstr where

piececategory A

data piece A ==> B = B

c :: A ==> B
c = B
